# cubic

./: CMakeLists.txt
cmake/: gtest.cmake
modules/: CMakeLists.txt
modules/demo/: CMakeLists.txt  demo.cpp
modules/solver/: CMakeLists.txt
modules/solver/include/solver/: solver.hpp
modules/solver/src/: solver.cpp
modules/solver/tests/: test_main.cpp
