cmake_minimum_required(VERSION 2.8)
project(rubic)

if(DEFINED ENV{OPENCV_DIR})
  find_package(OpenCV PATHS "$ENV{OPENCV_DIR}")
else()
  find_package(OpenCV)
endif()

if(DEFINED OpenCV_FOUND)
  SET(OpenCV_INCLUDE_DIRS "${OpenCV_INCLUDE_DIRS}" CACHE PATH "Path where OpenCV include files are located")
  SET(OpenCV_LIB_DIR "${OpenCV_LIB_DIR}" CACHE PATH "Path where OpenCV libraries are located")
  SET(OpenCV_LIBS "${OpenCV_LIBS}" CACHE PATH "List of OpenCV libraries to link")
else()
  if(DEFINED ENV{OPENCV_DIR})
    SET(OpenCV_LOCATION "$ENV{OPENCV_DIR}")
  else()
    SET(OpenCV_LOCATION "./3rdparty")
  endif()
  SET(OpenCV_INCLUDE_DIRS "${OpenCV_LOCATION}/include" CACHE PATH "Path where OpenCV include files are located")
  include_directories(${OpenCV_INCLUDE_DIRS})
  SET(OpenCV_LIB_DIR "${OpenCV_LOCATION}/lib" CACHE PATH "Path where OpenCV libraries are located")
  file(GLOB OpenCV_LIBS "${OpenCV_LIB_DIR}/*.lib")
  SET(OpenCV_LIBS "${OpenCV_LIBS}" CACHE PATH "List of OpenCV libraries to link")
endif()

include(cmake/gtest.cmake)
include_directories(modules/solver/include/solver)

add_subdirectory(modules)